# mcds

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac
.github/workflows/: build.yaml
m4/: ChangeLog
po/: Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  mcds.pot
src/: .gitignore  Makefile.am  Makefile.in  carddav.c  carddav.h  config.h.in  curl.c  curl.h  decrypt.c  decrypt.h  defs.h  main.c  mcds.1  mem.c  mem.h  options.h  prompt.c  prompt.h  rc.c  rc.h  secret.c  secret.h  vcard.c  vcard.h  xml.c  xml.h
